--- a/Project_NTT_data/Views/Home/Update.cshtml
+++ b/Project_NTT_data/Views/Home/Update.cshtml
@@ -25,7 +25,7 @@
     @Html.CheckBoxFor(x=>x.IsActive)
     </div>          
     <br />
-    @Html.HiddenFor(x=>x.Id)
+    @Html.HiddenFor(x=>x.CryptedID)
     <button class="btn btn-info">Update</button>
 </form>
 </div>  
